--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,146 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200;0,6..12,300;0,6..12,400;0,6..12,500;0,6..12,600;0,6..12,700;0,6..12,800;1,6..12,200;1,6..12,300;1,6..12,400;1,6..12,500;1,6..12,600;1,6..12,700;1,6..12,800&display=swap');
+:root {
+  --lightBlue: #8ecae6;
+  --blue: #219ebc;
+  --navy: #023047;
+  --yellow: #ffb703;
+  --orange: #fb8500;
+  --grey: #a2a2a2;
+  --lightGrey: #d9d9d9;
+  --cardBackgound: #f3f3f3;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  font-family: 'Nunito Sans', sans-serif;
+  margin: 0px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header {
+  font-family: 'Kanit', sans-serif;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: space-between;
+  align-items: baseline;
+  color: white;
+  background-color: var(--navy);
+  box-shadow: 0px 1px 5px black;
+  padding-inline: 2rem;
+}
+h1 {
+  letter-spacing: 3px;
+}
+h2 {
+  margin-top: 0px;
+  padding-top: 30px;
+  font-weight: 800;
+}
+h3 {
+  margin: 0px;
+  font-weight: 800;
+}
+p {
+  font-weight: 400;
+}
+footer {
+  height: 3rem;
+  background-color: var(--grey);
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+footer > * {
+  all: unset;
+  font-weight: 400;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+a {
+  color: var(--orange);
+}
+a:hover {
+  color: var(--yellow);
+}
+main > section {
+  width: 60%;
+  margin: auto;
+}
+#logoLink {
+  all: unset;
+  cursor: pointer;
+}
+#moon {
+  height: 27px;
+  width: 27px;
+  background-color: var(--grey);
+  box-shadow: 0px 0px 20px var(--grey);
+  border-radius: 25px;
+  cursor: pointer;
+}
+#moon-crater-small {
+  position: relative;
+  top: 5px;
+  left: 6px;
+  height: 5px;
+  width: 5px;
+  background-color: var(--lightGrey);
+  border-radius: 25px;
+}
+#moon-crater-medium {
+  position: relative;
+  top: 5px;
+  left: 18px;
+  height: 6px;
+  width: 6px;
+  background-color: var(--lightGrey);
+  border-radius: 25px;
+}
+#moon-crater-large {
+  position: relative;
+  top: 4px;
+  left: 6px;
+  height: 8px;
+  width: 8px;
+  background-color: var(--lightGrey);
+  border-radius: 25px;
+}
+#sun {
+  height: 27px;
+  width: 27px;
+  background-color: var(--yellow);
+  box-shadow: 0px 0px 20px var(--yellow);
+  border-radius: 25px;
+  cursor: pointer;
+}
+#circle-small {
+  height: 94px;
+  width: 94px;
+  top: 26%;
+  right: -65px;
+}
+#circle-medium {
+  height: 217px;
+  width: 217px;
+  top: 45%;
+  left: -75px;
+}
+#circle-large {
+  height: 260px;
+  width: 260px;
+  bottom: -16%;
+  right: -45px;
+}
+.circle {
+  background-color: var(--lightGrey);
+  border-radius: 300px;
+  position: fixed;
+  z-index: -1;
+}
+.dark {
+  background-color: black !important;
+  color: whitesmoke;
+}
+@media screen and (max-width: 1024px) {
+  .circle {
+    display: none;
   }
-  to {
-    transform: rotate(360deg);
+  main > section {
+    width: 90%;
+    margin: auto;
   }
 }
